kustomize/overlays/prod/ecfront/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecfront
spec:
  template:
    spec:
      volumes:
        - name: cred
          secret:
            secretName: prod-common-secret
            defaultMode: 256
        - name: mockten-static-file
          persistentVolumeClaim:
            claimName: ecfront-pvc
