kustomize/overlays/prod/ecfront/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecfront
  annotations:
    cloud.google.com/backend-config: '{"default": "prod-ecfront-backendconfig"}'
