kustomize/overlays/prod/ecfront/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mockten-ingress
  annotations:
      kubernetes.io/ingress.allow-http: "false"
      kubernetes.io/ingress.global-static-ip-name: prd-mockten-ip
      ingress.gcp.kubernetes.io/pre-shared-cert: mockten-prd-ssl
